--- a/algorithms/fbp.tex
+++ b/algorithms/fbp.tex
@@ -17,7 +17,7 @@ G &= (x_E + r_e * \sin(\delta) | y_E + r_e * \cos(\delta)) \\
   &= (r * \cos(\alpha) + r_e * \cos(\alpha) | r * \sin(\alpha) + r_e * \sin(\alpha))\\
   &= ([r + r_e] * \cos(\alpha) | [r + r_e] * \sin(\alpha))\\
 \overline{D\,S_D} &= ([y_E - y_D] * \tan(\alpha)| y_D)\\
-\overline{A\,S_A} &= ( | y_A )
+\overline{A\,S_A} &= ([y_E - y_A] * \tan(\alpha)| y_D | y_A )
 \end{align}
 
 \end{document}
