--- a/algorithms/fbp.tex
+++ b/algorithms/fbp.tex
@@ -8,7 +8,7 @@
 
 \begin{document}
 \maketitle
-\begin{align}
+\begin{align*}
 E &= (r * cos(\alpha) | r * sin(\alpha)) \\
 \delta &= 90^\circ - \alpha \\
 G &= (x_E + r_e * \sin(\delta) | y_E + r_e * \cos(\delta)) \\
@@ -16,8 +16,17 @@ G &= (x_E + r_e * \sin(\delta) | y_E + r_e * \cos(\delta)) \\
   &= (r * \cos(\alpha) + r_e * \sin(90^\circ - \alpha) | r * \sin(\alpha) + r_e * cos(90^\circ - \alpha))\\
   &= (r * \cos(\alpha) + r_e * \cos(\alpha) | r * \sin(\alpha) + r_e * \sin(\alpha))\\
   &= ([r + r_e] * \cos(\alpha) | [r + r_e] * \sin(\alpha))\\
-\overline{D\,S_D} &= ([y_E - y_D] * \tan(\alpha)| y_D)\\
-\overline{A\,S_A} &= ([y_E - y_A] * \tan(\alpha)| y_D | y_A )
-\end{align}
+\overline{D\,S_D} &= (y_E - y_D) * \tan(90^\circ-\alpha) - (x_G - x_D) \\
+\overline{A\,S_A} &= (y_E - y_A) * \tan(90^\circ-\alpha) - (x_G - x_A) \\
+2 * A_E &= \overline{D\,S_D} + \overline{A\,S_A} \\ %Effect Amount
+  &= (y_E - y_D) * \tan(90^\circ-\alpha) - (x_G - x_D) +\\&\qquad(y_E - y_A) * \tan(90^\circ-\alpha) - (x_G - x_A)\\
+  &= (y_E - y_D) * \tan(90^\circ-\alpha) +\\&\qquad(y_E - y_A) * \tan(90^\circ-\alpha) - 2 * (x_G - x_A) \\
+  &= [(y_E - y_D) + (y_E - y_A)] * \tan(90^\circ-\alpha) - 2 * (x_G - x_A)\\
+\end{align*}
+\textbf{Complexity:}
+\begin{equation}
+\mathcal{O}(x^2)
+\end{equation}
+
 
 \end{document}
