--- a/algorithms/README
+++ b/algorithms/README
@@ -6,4 +6,6 @@ Use svg2pdf: Get the source by executing
 git clone git://people.freedesktop.org/~cworth/svg2pdf
 , compile it, copy it to /usr/bin (or something similar) and the just execute 'make' in this directory.
 
+You probably should use convert to convert the SVGs to EPS but the use of PDFLaTeX is recommended so you have to find you own way if you can't.
+
 The PDF files have been deleted from all Git revision so don't wonder if you see strange log messages.
