--- a/algorithms/fbp.tex
+++ b/algorithms/fbp.tex
@@ -5,7 +5,7 @@
 \usepackage{amssymb,amsmath}
 \usepackage{graphicx}
 \usepackage{hyperref}
-\usepackage[english]{babel}:
+\usepackage[english]{babel}
 
 \date{}
 \title{Algorithm development draft on angular-dependent backprojection}
@@ -24,7 +24,8 @@
 \begin{minipage}{0.6\textwidth}
 \includegraphics[width=\textwidth]{mappicschema}
 \end{minipage}
-\textrm{Note: All coordinares are relative to M}\\
+\small\textrm{Note: All coordinares are relative to M}\\
+\normalsize
 \begin{align}
 E &= (r * cos(\alpha) | r * sin(\alpha)) \\
 %\delta &= 90^\circ - \alpha \\
